--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "redux-token-auth": "^0.19.0"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
